samples/_failures_safe/1761430445_cfe81d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bcd8ce5.c: In function ‘main’:
./samples/SAFE/__tmp_5bcd8ce5.c:142:44: error: ‘entry’ undeclared (first use in this function); did you mean ‘entries’?
  142 |         display_logs_recursive(entries, 0, entry
      |                                            ^~~~~
      |                                            entries
./samples/SAFE/__tmp_5bcd8ce5.c:142:44: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5bcd8ce5.c:142:49: error: expected ‘)’ at end of input
  142 |         display_logs_recursive(entries, 0, entry
      |                               ~                 ^
      |                                                 )
./samples/SAFE/__tmp_5bcd8ce5.c:142:9: error: too few arguments to function ‘display_logs_recursive’
  142 |         display_logs_recursive(entries, 0, entry
      |         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5bcd8ce5.c:57:6: note: declared here
   57 | void display_logs_recursive(LogEntry* entries, int index, int count, const char* filter_level) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5bcd8ce5.c:142:9: error: expected declaration or statement at end of input
  142 |         display_logs_recursive(entries, 0, entry
      |         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5bcd8ce5.c:142:9: error: expected declaration or statement at end of input
